# addressology-client

./: .gitignore  Cargo.toml  Readme.md  web-portal-cookie.key
.github/workflows/: build.yml  check.yml
compilation/: Contract.sol  dump.py  metadata.json  out.json  test-comp.json
conf/: ya-dummy-cruncher.json.template
frontend/: .eslintignore  .eslintrc.js  .prettierignore  index.html  package.json  vite.config.ts
frontend/src/: AddressCard.css  AddressCard.tsx  Aggregates.css  Aggregates.tsx  Aliases.css  Aliases.tsx  AnimatedGpuIcon.tsx  AnimatedGpuIconTester.tsx  Blockie.tsx  Blocks.css  Blocks.tsx  BrowseAddresses.css  BrowseAddresses.tsx  ChangePassScreen.tsx  Charts.tsx  CompiledContract.tsx  CompiledContractTemplate.tsx  ContractFromSources.css  ContractFromSources.tsx  DailyCharts.tsx  Dashboard.tsx  DisplayEth.tsx  Golem.css  Golem.tsx  InputParameter.tsx  InputParameters.tsx  LoginProvider.tsx  LoginScreen.tsx  Month.tsx  MyContracts.tsx  Outgoings.css  Summary.css  Summary.tsx  Transactions.css  Transactions.tsx  WelcomeScreen.tsx  Workers.css  Workers.tsx  index.css  main.tsx
frontend/src/common/: BackendCall.ts  DeepCompare.ts
frontend/src/logic/: Accounting.ts  Alias.ts  Scan.ts
frontend/src/model/: Contract.ts  Fancy.ts
frontend/src/providers/: BlocksDecoder.ts  CommonProvider.tsx  TxsDecoder.ts
migrations/: 20241004000001_init.sql  20241004000002_user.sql  20241004000003_contract.sql  20241004000004_contract2.sql  20241004000005_contract3.sql  20241004000006_owner.sql  20241004000007_fancycat.sql  20241004000008_minerextrainfo.sql  20241004000009_fixcontract.sql  20241004000010_uniqueaddressnetwork.sql  20241004000011_addpublickeybase.sql  20241004000012_publickeys.sql  20250307000001_init.sql  20250307000002_indices.sql
src/: api.rs  config.rs  cookie.rs  deploy.rs  email.rs  fancy.rs  hash.rs  main.rs  oauth.rs  runner.rs  solc.rs  types.rs  update.rs
src/api/: golem.rs  runners.rs  scope.rs  user.rs  utils.rs
src/api/contract/: api.rs  compile.rs  mod.rs
src/api/fancy/: buy.rs  deploy.rs  estimate.rs  job.rs  list.rs  mod.rs  my.rs  new.rs  score.rs  tokens.rs
src/api/oauth/: google.rs
src/api/user/: change_pass.rs  is_login.rs  login.rs  logout.rs  reset_pass.rs  set_pass.rs  utils.rs
src/db/: connection.rs  ops.rs
src/db/model/: contract.rs  mod.rs
src/db/ops/: contract.rs  fancy.rs  user.rs
src/error/: bag.rs  custom.rs  macros.rs  mod.rs  wrapped.rs
src/fancy/: fancy.rs  mod.rs  score.rs
src/service/: mod.rs  provider.rs  yagna.rs
